src/client/views/components/Layout.scss
@import 'web-fonts';
@import 'colors';
@import url(web-fonts-url('Open Sans', 'Comfortaa'));

.main {
  position:absolute;
  width:100vw;
  height:100vh;
  top:0;
  left:0;
  background-color: $lightColor;
}

.main_header {
  position:absolute;
  width:100%;
  height:4em;
  top:0;
  left:0;
  background-color: $darkColor;
  /*box-shadow: 0px 2px 8px $darkColor;*/
  box-shadow: 0px 0px 4px 1px $shadeColor;
}

.main_header_tab {
  position:relative;
  width:12em;
  height:100%;
  text-align:center;
  color: $paleColor;
  display:inline-block;
  cursor:pointer;
  border: solid 1px $darkColor;
  box-sizing: border-box;
  margin-right: -1px;
  border-top: none;
  border-bottom: none;
}

.main_header_tab:hover {
  background-color: $highlightColor;
  color: $lightColor;
}

.main_header_tab.active {
  background-color: $highlightColor;
  color: $lightColor;
}

.menu {
  position:absolute;
  left:0;
  top:4em;
  height:calc( 100% - 4em );
  width:30em;
  background-color: $shadeColor;
  overflow-y: auto;
  box-shadow: 0px 0px 8px 4px $darkColor;
}

.menu_item {
  position:relative;
  width:calc(100% - 2em);
  height:4em;
  margin-top:0.5em;
  padding:1em;
  background-color: $darkColor;
  overflow:hidden;
  color:$paleColor;
  cursor:pointer;
}

.menu_subtitle {
  display:inline-block;
  position:absolute;
  right:0.5em;
  bottom:0.5em;
}

.menu_item:hover,
.menu_item.active {
  background-color: $highlightColor;
  color: $lightColor;
}

.simple {
  position:relative;
  top:0;
  left:0;
  margin-top:0.5em;
  height: 2em;
  width: 100%;
  line-height:2em;
  background-color: $highlightColor;
  color: $lightColor;

  h1 {
    font-size:1em;
    margin:0 0 0 0.5em;

  }

  .simple_buttons {
    float:right;
    text-align:right;
    height:2em;
    color:$darkColor;
  }

  .simple_button {
    float:right;
    width:1.5em;
    text-align:center;
    height:2em;
    line-height:2em;
  }
}

.flip_horiz {
  transform: scaleX(-1);
}

.full_height {
  height:100%;
}

.inline {
  display:inline-block;
}

